k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-chat-server
  namespace: quick-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-chat-server
  template:
    metadata:
      labels:
        app: quick-chat-server
    spec:
      containers:
        - name: server
          image: suraim001/quick-chat-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/status
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/status
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
