k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-chat-client
  namespace: quick-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-chat-client
  template:
    metadata:
      labels:
        app: quick-chat-client
    spec:
      containers:
        - name: client
          image: suraim001/quick-chat-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 15
