k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quick-chat-server-service
  namespace: quick-chat
spec:
  selector:
    app: quick-chat-server
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30050
  type: NodePort
