k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quick-chat-client
  namespace: quick-chat
spec:
  selector:
    app: quick-chat-client
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
