k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quick-chat-mongo
  namespace: quick-chat
spec:
  selector:
    app: quick-chat-mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
