k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quick-chat-ingress
  namespace: quick-chat
spec:
  ingressClassName: nginx
  rules:
    - host: quickchat.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: quick-chat-server-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quick-chat-client-service
                port:
                  number: 80
